--- a/python-numpy/beginner/gold-miner.ipynb
+++ b/python-numpy/beginner/gold-miner.ipynb
@@ -1,1 +1,159 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"gold-miner.ipynb","provenance":[],"collapsed_sections":[]},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"markdown","source":["[![PracticeProbs](https://d33wubrfki0l68.cloudfront.net/b6800cc830e3fd5a3a4c3d9cfb1137e6a4c15c77/ec467/assets/images/transparent-1.png)](https://www.practiceprobs.com/)"],"metadata":{"id":"t1VEtnSjbu-d"}},{"cell_type":"markdown","source":["# [Gold Miner](https://www.practiceprobs.com/problemsets/python-numpy/beginner/gold-miner/)\n","\n","After binge watching the Discovery channel, you ditch your job as a trial lawyer to become a gold miner. You decide to prospect five locations underneath a 7x7 grid of land. How much gold do you uncover at each location?"],"metadata":{"id":"M6yShpelZy-I"}},{"cell_type":"code","source":["import numpy as np\n","\n","np.random.seed(5555)\n","gold = np.random.randint(low=0, high=10, size=(7,7))\n","\n","print(gold)\n","# [[2 3 0 5 2 0 3]\n","#  [8 8 0 7 1 5 3]\n","#  [0 1 6 2 1 4 5]\n","#  [4 0 8 9 9 8 7]\n","#  [4 2 7 0 7 2 1]\n","#  [9 8 9 2 5 0 8]\n","#  [1 9 8 2 6 4 3]]\n","\n","locs = np.array([\n","    [0,4],\n","    [2,2],\n","    [2,3],\n","    [5,1],\n","    [6,3]\n","])"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"ZlHN2R3QaPX3","executionInfo":{"status":"ok","timestamp":1650230550900,"user_tz":300,"elapsed":5,"user":{"displayName":"Ben Gorman","userId":"14173905571034790649"}},"outputId":"0bec401d-37b3-4877-c270-d3a148bdea2e"},"execution_count":null,"outputs":[{"output_type":"stream","name":"stdout","text":["[[2 3 0 5 2 0 3]\n"," [8 8 0 7 1 5 3]\n"," [0 1 6 2 1 4 5]\n"," [4 0 8 9 9 8 7]\n"," [4 2 7 0 7 2 1]\n"," [9 8 9 2 5 0 8]\n"," [1 9 8 2 6 4 3]]\n"]}]},{"cell_type":"markdown","source":["**Notes**\n","\n","- `gold` states how much gold is under each location in the 7x7 grid of land\n","- `locs` states the coordinates of the five locations where you dig\n"],"metadata":{"id":"xsPF49EvaBAM"}},{"cell_type":"markdown","source":["---"],"metadata":{"id":"h7D8d-J5cela"}},{"cell_type":"code","source":["# Your brilliant solution here!"],"metadata":{"id":"CWwTWfYCa4k0"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["## [See our solution!](https://www.practiceprobs.com/problemsets/python-numpy/beginner/gold-miner/solution/)"],"metadata":{"id":"bF3kvEc4a4It"}}]}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "t1VEtnSjbu-d"
+   },
+   "source": [
+    "[![PracticeProbs](https://d33wubrfki0l68.cloudfront.net/b6800cc830e3fd5a3a4c3d9cfb1137e6a4c15c77/ec467/assets/images/transparent-1.png)](https://www.practiceprobs.com/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "M6yShpelZy-I"
+   },
+   "source": [
+    "# [Gold Miner](https://www.practiceprobs.com/problemsets/python-numpy/beginner/gold-miner/)\n",
+    "\n",
+    "After binge watching the Discovery channel, you ditch your job as a trial lawyer to become a gold miner. You decide to prospect five locations underneath a 7x7 grid of land. How much gold do you uncover at each location?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 5,
+     "status": "ok",
+     "timestamp": 1650230550900,
+     "user": {
+      "displayName": "Ben Gorman",
+      "userId": "14173905571034790649"
+     },
+     "user_tz": 300
+    },
+    "id": "ZlHN2R3QaPX3",
+    "outputId": "0bec401d-37b3-4877-c270-d3a148bdea2e"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 3 0 5 2 0 3]\n",
+      " [8 8 0 7 1 5 3]\n",
+      " [0 1 6 2 1 4 5]\n",
+      " [4 0 8 9 9 8 7]\n",
+      " [4 2 7 0 7 2 1]\n",
+      " [9 8 9 2 5 0 8]\n",
+      " [1 9 8 2 6 4 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(5555)\n",
+    "gold = np.random.randint(low=0, high=10, size=(7,7))\n",
+    "\n",
+    "print(gold)\n",
+    "# [[2 3 0 5 2 0 3]\n",
+    "#  [8 8 0 7 1 5 3]\n",
+    "#  [0 1 6 2 1 4 5]\n",
+    "#  [4 0 8 9 9 8 7]\n",
+    "#  [4 2 7 0 7 2 1]\n",
+    "#  [9 8 9 2 5 0 8]\n",
+    "#  [1 9 8 2 6 4 3]]\n",
+    "\n",
+    "locs = np.array([\n",
+    "    [0,4],\n",
+    "    [2,2],\n",
+    "    [2,3],\n",
+    "    [5,1],\n",
+    "    [6,3]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "xsPF49EvaBAM"
+   },
+   "source": [
+    "**Notes**\n",
+    "\n",
+    "- `gold` states how much gold is under each location in the 7x7 grid of land\n",
+    "- `locs` states the coordinates of the five locations where you dig\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "h7D8d-J5cela"
+   },
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 6, 2, 8, 2])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gold[locs[:,0],locs[:,1]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "bF3kvEc4a4It"
+   },
+   "source": [
+    "## [See our solution!](https://www.practiceprobs.com/problemsets/python-numpy/beginner/gold-miner/solution/)"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "gold-miner.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "linusbio",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
