vectorizing big fish...

--- a/python-numpy/proficient/big-fish.ipynb
+++ b/python-numpy/proficient/big-fish.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "id": "ZlHN2R3QaPX3"
    },
@@ -70,10 +70,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "id": "CWwTWfYCa4k0"
    },
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "mms = MinMaxScaler()\n",
+    "weights_nrm = mms.fit_transform(weights[:, np.newaxis]).ravel() # 0 --> 1  normalized"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -90,31 +108,12 @@
        " {'loc': array([1, 3, 1]), 'weight_nrm': 0.6278460377532108, 'alive': True}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "mms = MinMaxScaler()\n",
-    "weights_nrm = mms.fit_transform(weights[:, np.newaxis]).ravel()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Using dictionaries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "fish = {i:{\"loc\": locs[i],\n",
     "           \"weight_nrm\": weights_nrm[i],\n",
     "           \"alive\": True} for i in range(len(locs))}\n",
@@ -123,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,355 +197,101 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 1 0 0 0 0 1 0 0]\n",
+      " [0 1 0 0 0 0 0 0 0 0]\n",
+      " [1 0 1 0 0 0 0 1 0 0]\n",
+      " [0 0 0 1 0 0 0 0 1 0]\n",
+      " [0 0 0 0 1 0 0 0 0 0]\n",
+      " [0 0 0 0 0 1 1 0 0 0]\n",
+      " [0 0 0 0 0 1 1 0 0 0]\n",
+      " [1 0 1 0 0 0 0 1 0 0]\n",
+      " [0 0 0 1 0 0 0 0 1 0]\n",
+      " [0 0 0 0 0 0 0 0 0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "loc_coinc = (locs[:,None] == locs).all(-1) * 1 # broadcast each loc to every loc similar to outer; true if all coords are true\n",
+    "print(loc_coinc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0 0 0 0 0 0]\n",
+      " [1 0 1 1 0 1 1 0 1 1]\n",
+      " [1 0 0 1 0 1 0 0 1 0]\n",
+      " [1 0 0 0 0 1 0 0 1 0]\n",
+      " [1 1 1 1 0 1 1 0 1 1]\n",
+      " [1 0 0 0 0 0 0 0 0 0]\n",
+      " [1 0 1 1 0 1 0 0 1 1]\n",
+      " [1 1 1 1 1 1 1 0 1 1]\n",
+      " [1 0 0 0 0 1 0 0 0 0]\n",
+      " [1 0 1 1 0 1 0 0 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "big_fish = (weights_nrm[:,None] > weights_nrm) * 1 # outer, but greater than\n",
+    "print(big_fish)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "array([[[[ 0,  0,  0],\n",
-       "         [-1, -1, -2],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-5, -5, -4],\n",
-       "         [-5,  0,  0],\n",
-       "         [-5,  0,  0],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-1, -3, -1]],\n",
-       "\n",
-       "        [[ 0,  0,  0],\n",
-       "         [-1, -1, -2],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-5, -5, -4],\n",
-       "         [-5,  0,  0],\n",
-       "         [-5,  0,  0],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-1, -3, -1]],\n",
-       "\n",
-       "        [[ 0,  0,  0],\n",
-       "         [-1, -1, -2],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-5, -5, -4],\n",
-       "         [-5,  0,  0],\n",
-       "         [-5,  0,  0],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-1, -3, -1]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 1,  1,  1],\n",
-       "         [ 0,  0, -1],\n",
-       "         [ 1,  1,  1],\n",
-       "         [-1,  0, -2],\n",
-       "         [-4, -4, -3],\n",
-       "         [-4,  1,  1],\n",
-       "         [-4,  1,  1],\n",
-       "         [ 1,  1,  1],\n",
-       "         [-1,  0, -2],\n",
-       "         [ 0, -2,  0]],\n",
-       "\n",
-       "        [[ 1,  1,  1],\n",
-       "         [ 0,  0, -1],\n",
-       "         [ 1,  1,  1],\n",
-       "         [-1,  0, -2],\n",
-       "         [-4, -4, -3],\n",
-       "         [-4,  1,  1],\n",
-       "         [-4,  1,  1],\n",
-       "         [ 1,  1,  1],\n",
-       "         [-1,  0, -2],\n",
-       "         [ 0, -2,  0]],\n",
-       "\n",
-       "        [[ 2,  2,  2],\n",
-       "         [ 1,  1,  0],\n",
-       "         [ 2,  2,  2],\n",
-       "         [ 0,  1, -1],\n",
-       "         [-3, -3, -2],\n",
-       "         [-3,  2,  2],\n",
-       "         [-3,  2,  2],\n",
-       "         [ 2,  2,  2],\n",
-       "         [ 0,  1, -1],\n",
-       "         [ 1, -1,  1]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 0,  0,  0],\n",
-       "         [-1, -1, -2],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-5, -5, -4],\n",
-       "         [-5,  0,  0],\n",
-       "         [-5,  0,  0],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-1, -3, -1]],\n",
-       "\n",
-       "        [[ 0,  0,  0],\n",
-       "         [-1, -1, -2],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-5, -5, -4],\n",
-       "         [-5,  0,  0],\n",
-       "         [-5,  0,  0],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-1, -3, -1]],\n",
-       "\n",
-       "        [[ 0,  0,  0],\n",
-       "         [-1, -1, -2],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-5, -5, -4],\n",
-       "         [-5,  0,  0],\n",
-       "         [-5,  0,  0],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-1, -3, -1]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 2,  2,  2],\n",
-       "         [ 1,  1,  0],\n",
-       "         [ 2,  2,  2],\n",
-       "         [ 0,  1, -1],\n",
-       "         [-3, -3, -2],\n",
-       "         [-3,  2,  2],\n",
-       "         [-3,  2,  2],\n",
-       "         [ 2,  2,  2],\n",
-       "         [ 0,  1, -1],\n",
-       "         [ 1, -1,  1]],\n",
-       "\n",
-       "        [[ 1,  1,  1],\n",
-       "         [ 0,  0, -1],\n",
-       "         [ 1,  1,  1],\n",
-       "         [-1,  0, -2],\n",
-       "         [-4, -4, -3],\n",
-       "         [-4,  1,  1],\n",
-       "         [-4,  1,  1],\n",
-       "         [ 1,  1,  1],\n",
-       "         [-1,  0, -2],\n",
-       "         [ 0, -2,  0]],\n",
-       "\n",
-       "        [[ 3,  3,  3],\n",
-       "         [ 2,  2,  1],\n",
-       "         [ 3,  3,  3],\n",
-       "         [ 1,  2,  0],\n",
-       "         [-2, -2, -1],\n",
-       "         [-2,  3,  3],\n",
-       "         [-2,  3,  3],\n",
-       "         [ 3,  3,  3],\n",
-       "         [ 1,  2,  0],\n",
-       "         [ 2,  0,  2]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 5,  5,  5],\n",
-       "         [ 4,  4,  3],\n",
-       "         [ 5,  5,  5],\n",
-       "         [ 3,  4,  2],\n",
-       "         [ 0,  0,  1],\n",
-       "         [ 0,  5,  5],\n",
-       "         [ 0,  5,  5],\n",
-       "         [ 5,  5,  5],\n",
-       "         [ 3,  4,  2],\n",
-       "         [ 4,  2,  4]],\n",
-       "\n",
-       "        [[ 5,  5,  5],\n",
-       "         [ 4,  4,  3],\n",
-       "         [ 5,  5,  5],\n",
-       "         [ 3,  4,  2],\n",
-       "         [ 0,  0,  1],\n",
-       "         [ 0,  5,  5],\n",
-       "         [ 0,  5,  5],\n",
-       "         [ 5,  5,  5],\n",
-       "         [ 3,  4,  2],\n",
-       "         [ 4,  2,  4]],\n",
-       "\n",
-       "        [[ 4,  4,  4],\n",
-       "         [ 3,  3,  2],\n",
-       "         [ 4,  4,  4],\n",
-       "         [ 2,  3,  1],\n",
-       "         [-1, -1,  0],\n",
-       "         [-1,  4,  4],\n",
-       "         [-1,  4,  4],\n",
-       "         [ 4,  4,  4],\n",
-       "         [ 2,  3,  1],\n",
-       "         [ 3,  1,  3]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 5,  5,  5],\n",
-       "         [ 4,  4,  3],\n",
-       "         [ 5,  5,  5],\n",
-       "         [ 3,  4,  2],\n",
-       "         [ 0,  0,  1],\n",
-       "         [ 0,  5,  5],\n",
-       "         [ 0,  5,  5],\n",
-       "         [ 5,  5,  5],\n",
-       "         [ 3,  4,  2],\n",
-       "         [ 4,  2,  4]],\n",
-       "\n",
-       "        [[ 0,  0,  0],\n",
-       "         [-1, -1, -2],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-5, -5, -4],\n",
-       "         [-5,  0,  0],\n",
-       "         [-5,  0,  0],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-1, -3, -1]],\n",
-       "\n",
-       "        [[ 0,  0,  0],\n",
-       "         [-1, -1, -2],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-5, -5, -4],\n",
-       "         [-5,  0,  0],\n",
-       "         [-5,  0,  0],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-1, -3, -1]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 5,  5,  5],\n",
-       "         [ 4,  4,  3],\n",
-       "         [ 5,  5,  5],\n",
-       "         [ 3,  4,  2],\n",
-       "         [ 0,  0,  1],\n",
-       "         [ 0,  5,  5],\n",
-       "         [ 0,  5,  5],\n",
-       "         [ 5,  5,  5],\n",
-       "         [ 3,  4,  2],\n",
-       "         [ 4,  2,  4]],\n",
-       "\n",
-       "        [[ 0,  0,  0],\n",
-       "         [-1, -1, -2],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-5, -5, -4],\n",
-       "         [-5,  0,  0],\n",
-       "         [-5,  0,  0],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-1, -3, -1]],\n",
-       "\n",
-       "        [[ 0,  0,  0],\n",
-       "         [-1, -1, -2],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-5, -5, -4],\n",
-       "         [-5,  0,  0],\n",
-       "         [-5,  0,  0],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-1, -3, -1]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 0,  0,  0],\n",
-       "         [-1, -1, -2],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-5, -5, -4],\n",
-       "         [-5,  0,  0],\n",
-       "         [-5,  0,  0],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-1, -3, -1]],\n",
-       "\n",
-       "        [[ 0,  0,  0],\n",
-       "         [-1, -1, -2],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-5, -5, -4],\n",
-       "         [-5,  0,  0],\n",
-       "         [-5,  0,  0],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-1, -3, -1]],\n",
-       "\n",
-       "        [[ 0,  0,  0],\n",
-       "         [-1, -1, -2],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-5, -5, -4],\n",
-       "         [-5,  0,  0],\n",
-       "         [-5,  0,  0],\n",
-       "         [ 0,  0,  0],\n",
-       "         [-2, -1, -3],\n",
-       "         [-1, -3, -1]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 2,  2,  2],\n",
-       "         [ 1,  1,  0],\n",
-       "         [ 2,  2,  2],\n",
-       "         [ 0,  1, -1],\n",
-       "         [-3, -3, -2],\n",
-       "         [-3,  2,  2],\n",
-       "         [-3,  2,  2],\n",
-       "         [ 2,  2,  2],\n",
-       "         [ 0,  1, -1],\n",
-       "         [ 1, -1,  1]],\n",
-       "\n",
-       "        [[ 1,  1,  1],\n",
-       "         [ 0,  0, -1],\n",
-       "         [ 1,  1,  1],\n",
-       "         [-1,  0, -2],\n",
-       "         [-4, -4, -3],\n",
-       "         [-4,  1,  1],\n",
-       "         [-4,  1,  1],\n",
-       "         [ 1,  1,  1],\n",
-       "         [-1,  0, -2],\n",
-       "         [ 0, -2,  0]],\n",
-       "\n",
-       "        [[ 3,  3,  3],\n",
-       "         [ 2,  2,  1],\n",
-       "         [ 3,  3,  3],\n",
-       "         [ 1,  2,  0],\n",
-       "         [-2, -2, -1],\n",
-       "         [-2,  3,  3],\n",
-       "         [-2,  3,  3],\n",
-       "         [ 3,  3,  3],\n",
-       "         [ 1,  2,  0],\n",
-       "         [ 2,  0,  2]]],\n",
-       "\n",
-       "\n",
-       "       [[[ 1,  1,  1],\n",
-       "         [ 0,  0, -1],\n",
-       "         [ 1,  1,  1],\n",
-       "         [-1,  0, -2],\n",
-       "         [-4, -4, -3],\n",
-       "         [-4,  1,  1],\n",
-       "         [-4,  1,  1],\n",
-       "         [ 1,  1,  1],\n",
-       "         [-1,  0, -2],\n",
-       "         [ 0, -2,  0]],\n",
-       "\n",
-       "        [[ 3,  3,  3],\n",
-       "         [ 2,  2,  1],\n",
-       "         [ 3,  3,  3],\n",
-       "         [ 1,  2,  0],\n",
-       "         [-2, -2, -1],\n",
-       "         [-2,  3,  3],\n",
-       "         [-2,  3,  3],\n",
-       "         [ 3,  3,  3],\n",
-       "         [ 1,  2,  0],\n",
-       "         [ 2,  0,  2]],\n",
-       "\n",
-       "        [[ 1,  1,  1],\n",
-       "         [ 0,  0, -1],\n",
-       "         [ 1,  1,  1],\n",
-       "         [-1,  0, -2],\n",
-       "         [-4, -4, -3],\n",
-       "         [-4,  1,  1],\n",
-       "         [-4,  1,  1],\n",
-       "         [ 1,  1,  1],\n",
-       "         [-1,  0, -2],\n",
-       "         [ 0, -2,  0]]]])"
+       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+       "       [1, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.add.outer(locs, -locs)"
+    "big_fish * loc_coinc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(locs[0])"
    ]
   },
   {
