--- a/python-numpy/proficient/big-fish.ipynb
+++ b/python-numpy/proficient/big-fish.ipynb
@@ -276,22 +276,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0])"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.unique(locs[0])"
+    "# aborting direction, which is only simple for two coincident fish"
    ]
   },
   {
