--- a/python-numpy/proficient/pixel-artist.ipynb
+++ b/python-numpy/proficient/pixel-artist.ipynb
@@ -1,1 +1,180 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"pixel-artist.ipynb","provenance":[],"collapsed_sections":[]},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"markdown","source":["[![PracticeProbs](https://d33wubrfki0l68.cloudfront.net/b6800cc830e3fd5a3a4c3d9cfb1137e6a4c15c77/ec467/assets/images/transparent-1.png)](https://www.practiceprobs.com/)"],"metadata":{"id":"t1VEtnSjbu-d"}},{"cell_type":"markdown","source":["# [Pixel Artist](https://www.practiceprobs.com/problemsets/python-numpy/proficient/pixel-artist/)\n","\n","You're a pixel artist 👩‍🎨. You have a collection of five 10x10-pixel images stored in a 5x3x10x10 array."],"metadata":{"id":"M6yShpelZy-I"}},{"cell_type":"code","source":["import numpy as np\n","\n","rng = np.random.default_rng(1234)\n","imgs = rng.uniform(low=0, high=1, size=(5,3,10,10))"],"metadata":{"id":"ZlHN2R3QaPX3"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["The (i,j,k,l) element corresponds to the ith image, jth color channel (RGB), kth row of pixels, jth column of pixels.\n","\n","You want to plot these images, but your plotting software expects color channel to be the last dimension of the array. Rearrange your array accordingly."],"metadata":{"id":"w9EsBXWUhpCa"}},{"cell_type":"markdown","source":["---"],"metadata":{"id":"h7D8d-J5cela"}},{"cell_type":"code","source":["# Your brilliant solution here!"],"metadata":{"id":"CWwTWfYCa4k0"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["## [See our solution!](https://www.practiceprobs.com/problemsets/python-numpy/proficient/pixel-artist/solution/)"],"metadata":{"id":"bF3kvEc4a4It"}}]}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "t1VEtnSjbu-d"
+   },
+   "source": [
+    "[![PracticeProbs](https://d33wubrfki0l68.cloudfront.net/b6800cc830e3fd5a3a4c3d9cfb1137e6a4c15c77/ec467/assets/images/transparent-1.png)](https://www.practiceprobs.com/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "M6yShpelZy-I"
+   },
+   "source": [
+    "# [Pixel Artist](https://www.practiceprobs.com/problemsets/python-numpy/proficient/pixel-artist/)\n",
+    "\n",
+    "You're a pixel artist 👩‍🎨. You have a collection of five 10x10-pixel images stored in a 5x3x10x10 array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "id": "ZlHN2R3QaPX3"
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "rng = np.random.default_rng(1234)\n",
+    "imgs = rng.uniform(low=0, high=1, size=(5,3,10,10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "w9EsBXWUhpCa"
+   },
+   "source": [
+    "The (i,j,k,l) element corresponds to the ith image, jth color channel (RGB), kth row of pixels, jth column of pixels.\n",
+    "\n",
+    "You want to plot these images, but your plotting software expects color channel to be the last dimension of the array. Rearrange your array accordingly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "h7D8d-J5cela"
+   },
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2],\n",
+       "       [1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2],\n",
+       "       [1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2],\n",
+       "       [1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2],\n",
+       "       [1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2],\n",
+       "       [1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2],\n",
+       "       [1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2],\n",
+       "       [1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2],\n",
+       "       [1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2],\n",
+       "       [1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2, 1.2]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# set img values to allow visual cross check for correctness\n",
+    "for i in range(5):\n",
+    "    for j in range(3):\n",
+    "        imgs[i,j,:,:] = i + j/10\n",
+    "# imgs[1,2] should contain values 1.2\n",
+    "imgs[1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "id": "CWwTWfYCa4k0"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 10, 5, 3)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_imgs = np.transpose(imgs, (2,3,0,1))\n",
+    "new_imgs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1],\n",
+       "       [3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1],\n",
+       "       [3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1],\n",
+       "       [3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1],\n",
+       "       [3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1],\n",
+       "       [3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1],\n",
+       "       [3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1],\n",
+       "       [3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1],\n",
+       "       [3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1],\n",
+       "       [3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1, 3.1]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check images still complete\n",
+    "new_imgs[:,:,3,1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "bF3kvEc4a4It"
+   },
+   "source": [
+    "## [See our solution!](https://www.practiceprobs.com/problemsets/python-numpy/proficient/pixel-artist/solution/)"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "pixel-artist.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "linusbio",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.10"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
