--- a/python-numpy/expert/table-tennis.ipynb
+++ b/python-numpy/expert/table-tennis.ipynb
@@ -85,12 +85,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "CWwTWfYCa4k0"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[999.    47.75 189.61 210.25  88.36 153.26  10.24  47.33   1.72 170.3 ]\n",
+      " [ 47.75 999.   114.92 195.72  47.47  94.67 118.81   1.54  36.12   5.38]\n",
+      " [189.61 114.92 999.    19.54  11.97  12.18 222.61 208.22  31.02  20.34]\n",
+      " [210.25 195.72  19.54 999.     0.58  32.38   0.18 136.42 169.52  18.23]\n",
+      " [ 88.36  47.47  11.97   0.58 999.   137.12  67.08  13.69 155.75  99.6 ]\n",
+      " [153.26  94.67  12.18  32.38 137.12 999.     2.22  79.03  65.29 180.63]\n",
+      " [ 10.24 118.81 222.61   0.18  67.08   2.22 999.   175.83  16.4  140.19]\n",
+      " [ 47.33   1.54 208.22 136.42  13.69  79.03 175.83 999.   181.44   1.44]\n",
+      " [  1.72  36.12  31.02 169.52 155.75  65.29  16.4  181.44 999.    47.2 ]\n",
+      " [170.3    5.38  20.34  18.23  99.6  180.63 140.19   1.44  47.2  999.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.set_printoptions(suppress=True)\n",
+    "\n",
+    "sq_diffs = score_diffs**2\n",
+    "sq_diffs[np.isnan(sq_diffs)] = 999\n",
+    "sq_diffs = sq_diffs.astype(np.float32)\n",
+    "print(np.round(sq_diffs,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from itertools import permutations\n",
+    "import math\n",
+    "\n",
+    "# brute force all combinations\n",
+    "idxs = np.arange(10)\n",
+    "sum_sq_diffs = np.zeros((math.factorial(10))).astype(np.float32)\n",
+    "running_min_diff = np.inf\n",
+    "min_idxs = np.zeros((10), dtype=np.float32)\n",
+    "idx_comb = permutations(idxs, 10)\n",
+    "\n",
+    "for i, comb in enumerate(idx_comb):\n",
+    "    sum_sq_diffs[i] = np.sum(sq_diffs[np.array(comb),idxs])\n",
+    "    if sum_sq_diffs[i] < running_min_diff:\n",
+    "        running_min_diff = sum_sq_diffs[i]\n",
+    "        min_idxs = np.array(comb, dtype=np.float32)\n",
+    "    # if i == 42: # for testing\n",
+    "    #     break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([8., 7., 4., 6., 3., 2., 5., 9., 0., 1.], dtype=float32)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# results of brute force method\n",
+    "argmin = np.argmin(sum_sq_diffs)\n",
+    "min_sq_diff = sum_sq_diffs[argmin]\n",
+    "min_idxs"
+   ]
   },
   {
    "cell_type": "markdown",
